--- a/dt354/src/main/resources/application.properties
+++ b/dt354/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url= jdbc:mysql://localhost:3306/dt354
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create-drop
+
+multipart.enabled=true
+multipart.max-file-size=2mb
